--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
